force-app/main/default/objects/Plane__c/fields/Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>Flight_Hours__c</fullName>
    <label>Flight Hours</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>