force-app/main/default/objects/Plane__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( 
CASE(Status__c, 
"In Service", "/img/samples/light_green.gif",
"Certified For Service", "/img/samples/light_yellow.gif",
"Maintenance Hold", "/img/samples/light_red.gif", 
"/s.gif"), 
"status color")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plane Status</label>
    <type>Text</type>
</CustomField>