force-app/main/default/objects/Plane__c/fields/Last_Maintenance_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance_Check__c</fullName>
    <label>Last Maintenance Check</label>
    <summarizedField>Maintenance_Check__c.Date_Completed__c</summarizedField>
    <summaryForeignKey>Maintenance_Check__c.Plane__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>