force-app/main/default/objects/Plane__c/fields/Lease_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration__c</fullName>
    <label>Lease Expiration</label>
    <type>Date</type>
</CustomField>