force-app/main/default/objects/Plane__c/fields/Next_Flight__c.field-meta.xml
<CustomField>
    <fullName>Next_Flight__c</fullName>
    <label>Next Flight</label>
    <summarizedField>Flight__c.Departure_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Flight__c.Status__c</field>
        <operation>equals</operation>
        <value>Arrived, Scheduled, On-Time, Delayed</value>
    </summaryFilterItems>
    <summaryForeignKey>Flight__c.Plane__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>