force-app/main/default/objects/Plane__c/fields/Next_Maintenance_Check__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Check__c</fullName>
    <label>Next Maintenance Check</label>
    <type>DateTime</type>
</CustomField>