force-app/main/default/objects/Plane__c/fields/Plane_ID__c.field-meta.xml
<CustomField>
    <fullName>Plane_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Plane ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>