force-app/main/default/objects/Plane__c/fields/Previous_Flight__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight__c</fullName>
    <label>Previous Flight</label>
    <summarizedField>Flight__c.Actual_Arrival_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Flight__c.Status__c</field>
        <operation>equals</operation>
        <value>Arrived, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Flight__c.Plane__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>