force-app/main/default/objects/Plane__c/fields/Purchased_On__c.field-meta.xml
<CustomField>
    <fullName>Purchased_On__c</fullName>
    <label>Purchased On</label>
    <type>Date</type>
</CustomField>