force-app/main/default/objects/Plane__c/fields/Required_Crew__c.field-meta.xml
<CustomField>
    <fullName>Required_Crew__c</fullName>
    <label>Required Crew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>