force-app/main/default/objects/Plane__c/fields/Required_Pilots__c.field-meta.xml
<CustomField>
    <fullName>Required_Pilots__c</fullName>
    <label>Required Pilots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>