force-app/main/default/objects/Plane__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>In Preparation</fullName>
            </value>
            <value>
                <fullName>Awaiting Certification</fullName>
            </value>
            <value>
                <fullName>In Certification</fullName>
            </value>
            <value>
                <fullName>Certified for Service</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>Maintenance Hold</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>