force-app/main/default/objects/Plane__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Planes</relationshipLabel>
    <relationshipName>Planes</relationshipName>
    <type>Lookup</type>
</CustomField>