force-app/main/default/objects/Plane__c/fields/Total_Plane_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Plane_Revenue__c</fullName>
    <label>Total Plane Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>