force-app/main/default/objects/Plane__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Hours__c</columns>
    <columns>Seats__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Fleet View</label>
</ListView>