force-app/main/default/objects/Plane__c/listViews/All_Planes.listView-meta.xml
<ListView>
    <fullName>All_Planes</fullName>
    <columns>NAME</columns>
    <columns>Flight_Hours__c</columns>
    <columns>Seats__c</columns>
    <columns>Status__c</columns>
    <columns>Plane_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Planes</label>
</ListView>