force-app/main/default/objects/Plane__c/listViews/Awaiting_Inspection.listView-meta.xml
<ListView>
    <fullName>Awaiting_Inspection</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Seats__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Certification,In Certification</value>
    </filters>
    <label>Inspection Pipeline</label>
</ListView>