force-app/main/default/objects/Plane__c/listViews/Boeing.listView-meta.xml
<ListView>
    <fullName>Boeing</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Purchased_On__c</columns>
    <columns>Status__c</columns>
    <columns>Seats__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Boeing</value>
    </filters>
    <label>Boeing Planes</label>
</ListView>