force-app/main/default/objects/Plane__c/listViews/Planes_in_Inspection_pinepline.listView-meta.xml
<ListView>
    <fullName>Planes_in_Inspection_pinepline</fullName>
    <columns>NAME</columns>
    <columns>Image__c</columns>
    <columns>Next_Maintenance_Check__c</columns>
    <columns>Last_Maintenance_Check__c</columns>
    <columns>Mileage__c</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>In Service</value>
    </filters>
    <label>Planes in Inspection pipepline</label>
</ListView>